# open-lambda

./: README.md  dune-project  open_lambda.opam
examples/: test1.l
lib/: dune  interp.ml  lexer.mll  parser.mly  syntax.ml
test/: dune
